{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 392,
  "lineage": "f7f31aad-bab6-6dca-5bf3-769807e1c51f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-01863f2250e6a55b0",
            "public_dns": "ec2-13-54-233-128.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.54.233.128",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Customer": "Qrious",
              "Environment": "prod",
              "Name": "sandbox-jenkins-jenkins-master-eip",
              "Owner": "sre@qrious.co.nz",
              "Project": "Qrious Jenkins CI"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0b6d843e085420557",
            "public_dns": "ec2-3-105-197-142.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.105.197.142",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Customer": "Qrious",
              "Environment": "prod",
              "Name": "sandbox-jenkins-nat-eip",
              "Owner": "sre@qrious.co.nz",
              "Project": "Qrious Jenkins CI"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a5fc80ec944398f",
            "arn": "arn:aws:ec2:ap-southeast-2:587885198623:instance/i-0e4225c5e3bffb896",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "master_instance_profile",
            "id": "i-0e4225c5e3bffb896",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mao_home_id_rsa",
            "monitoring": false,
            "primary_network_interface_id": "eni-08439a9c8089ce0f8",
            "private_dns": "ip-172-25-212-228.ap-southeast-2.compute.internal",
            "private_ip": "172.25.212.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cea1b1be9d7cf41b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a8981bfd74adcc4c",
            "tags": {
              "Customer": "Qrious",
              "Downtime": "default",
              "Environment": "prod",
              "Name": "sandbox-jenkins-jenkins-master",
              "Owner": "sre@qrious.co.nz",
              "Project": "Qrious Jenkins CI"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07bfd3eae74831e7b"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.master_instance_profile",
            "aws_security_group.master",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6d843e085420557",
            "id": "nat-07926a1e9ec8a719a",
            "network_interface_id": "eni-008dfd65748ec4b73",
            "private_ip": "172.25.212.237",
            "public_ip": "3.105.197.142",
            "subnet_id": "subnet-0a8981bfd74adcc4c",
            "tags": {
              "Customer": "Qrious",
              "Environment": "prod",
              "Name": "sandbox-jenkins-nat-gw",
              "Owner": "sre@qrious.co.nz",
              "Project": "Qrious Jenkins CI"
            }
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-044505f85ba2fb88f",
            "owner_id": "587885198623",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-07926a1e9ec8a719a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.201.247.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0cd0faa6ab0fa1224",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Customer": "Qrious",
              "Environment": "prod",
              "Name": "sandbox-jenkins-private-subnet-route-table",
              "Owner": "sre@qrious.co.nz",
              "Project": "Qrious Jenkins CI"
            },
            "vpc_id": "vpc-0e5a78df0da71cb8f"
          },
          "depends_on": [
            "aws_nat_gateway.nat_gw",
            "data.aws_cloudformation_stack.aviatrix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02b874ad6ee948a0b",
            "owner_id": "587885198623",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-083e0b7948ddc301b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.201.247.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0cd0faa6ab0fa1224",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Customer": "Qrious",
              "Environment": "prod",
              "Name": "sandbox-jenkins-public-subnet-route-table",
              "Owner": "sre@qrious.co.nz",
              "Project": "Qrious Jenkins CI"
            },
            "vpc_id": "vpc-0e5a78df0da71cb8f"
          },
          "depends_on": [
            "data.aws_cloudformation_stack.aviatrix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06cd8988ff8f8d7c5",
            "route_table_id": "rtb-044505f85ba2fb88f",
            "subnet_id": "subnet-0fc7d5cb85f5b687a"
          },
          "depends_on": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b6d7e332eb1e10d",
            "route_table_id": "rtb-02b874ad6ee948a0b",
            "subnet_id": "subnet-0a8981bfd74adcc4c"
          },
          "depends_on": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:587885198623:security-group/sg-07bfd3eae74831e7b",
            "description": "Used in the terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07bfd3eae74831e7b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "172.25.212.0/24"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins-master-security-group",
            "name_prefix": null,
            "owner_id": "587885198623",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0e5a78df0da71cb8f"
          },
          "depends_on": [
            "data.aws_cloudformation_stack.aviatrix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "slave",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:587885198623:security-group/sg-065e48996fd05e12e",
            "description": "Used in the private subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065e48996fd05e12e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.25.212.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "jenkins-slave-security-group",
            "name_prefix": null,
            "owner_id": "587885198623",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0e5a78df0da71cb8f"
          },
          "depends_on": [
            "data.aws_cloudformation_stack.aviatrix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:587885198623:subnet/subnet-0fc7d5cb85f5b687a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.25.212.192/27",
            "id": "subnet-0fc7d5cb85f5b687a",
            "map_public_ip_on_launch": false,
            "owner_id": "587885198623",
            "tags": {
              "Customer": "Qrious",
              "Environment": "prod",
              "Name": "sandbox-jenkins-private-subnet",
              "Owner": "sre@qrious.co.nz",
              "Project": "Qrious Jenkins CI"
            },
            "vpc_id": "vpc-0e5a78df0da71cb8f"
          },
          "depends_on": [
            "data.aws_cloudformation_stack.aviatrix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:587885198623:subnet/subnet-0a8981bfd74adcc4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.25.212.224/28",
            "id": "subnet-0a8981bfd74adcc4c",
            "map_public_ip_on_launch": false,
            "owner_id": "587885198623",
            "tags": {
              "Customer": "Qrious",
              "Environment": "prod",
              "Name": "sandbox-jenkins-public-subnet",
              "Owner": "sre@qrious.co.nz",
              "Project": "Qrious Jenkins CI"
            },
            "vpc_id": "vpc-0e5a78df0da71cb8f"
          },
          "depends_on": [
            "data.aws_cloudformation_stack.aviatrix"
          ]
        }
      ]
    }
  ]
}